<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fitsSystemWindows="true"
		tools:context="ru.dudin.diploma.MainActivity">

	<android.support.design.widget.AppBarLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
				android:id="@+id/view_toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:background="?attr/colorPrimary"
				app:popupTheme="@style/AppTheme.PopupOverlay" />

	</android.support.design.widget.AppBarLayout>

	<include layout="@layout/content_main" />

	<android.support.design.widget.FloatingActionButton
			android:id="@+id/view_fab"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom|end"
			android:layout_margin="@dimen/fab_margin"
			android:tint="@color/background_color_selector"
			android:src="@drawable/ic_add_white_48dp" />

</android.support.design.widget.CoordinatorLayout>
