<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.TextInputLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="16dp"
	android:hint="@string/post_text_hint">

	<android.support.design.widget.TextInputEditText
		android:id="@+id/view_post"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

</android.support.design.widget.TextInputLayout>
